<resources>
    <string name="app_name">Reward Autosearcher</string>
    <string name="search_hint">Enter number of searches</string>
    <string name="delay_hint">Enter delay between searches (recommend 15+ seconds)</string>
    <string name="search_text">Search Count</string>
    <string name="delay_text">Delay (second)</string>
    <string name="keep_screen_on_description">Keep screen on during search</string>
    <string name="query_description">Query source:</string>
    <string name="reddit_source">Reddit</string>
    <string name="wikipedia_source">Wikipedia</string>
    <string name="google_trend_source">Google Trends</string>
    <string name="bing_trend_source">Bing Trends</string>
    <string name="newspaper_source">Newspaper</string>
    <string name="start_description">Start</string>
    <string name="login_description">Login</string>
    <string name="logout_description">Logout</string>
    <string name="welcome_description">Microsoft Autosearcher</string>
    <string name="background_description">Background process</string>
    <string name="startBtn_description">Start</string>
    <string name="stopBtn_description">Stop</string>
    <string name="complete_description">Completed!</string>
    <string name="progress_text">Processing: %1$d / %2$d</string>
    <string name="stopBtn_notification">Auto searching has been stopped</string>
    <string name="noqueries_found">No query sources selected, fallback to local queries</string>
    <string name="invalid_delay">Please enter valid number of searches or delay</string>
    <string name="invalid_searchcount">Please enter valid number of searches or delay</string>
    <string name="background_start">Background mode has been enabled</string>
    <string name="background_stop">Background mode has been disabled</string>
</resources>