<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#5875CC"
            android:fontFamily="@font/cambo"
            android:padding="10dp"
            android:text="@string/welcome_description"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#f1e8df"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/search_hint"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="30"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/delayLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="0dp"
                android:hint="@string/delay_hint"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/delayInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="60"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/keepScreenBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/keep_screen_on_description"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/backgroundRunBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/background_description"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/device_mode_label"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/deviceModeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <RadioButton
                    android:id="@+id/radioMobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_mobile"
                    android:checked="true"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/radioPC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_pc"
                    android:layout_weight="1"/>
            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/query_description"
                android:textAlignment="textStart"
                android:textSize="15sp" />

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:columnCount="2">

                <CheckBox
                    android:id="@+id/redditSourceBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reddit_source"
                    android:textSize="15sp"
                    app:layout_columnWeight="1" />

                <CheckBox
                    android:id="@+id/googleTrendSourceBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/google_trend_source"
                    android:textSize="15sp"
                    app:layout_columnWeight="1" />

                <CheckBox
                    android:id="@+id/wikipediaSourceBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wikipedia_source"
                    android:textSize="15sp"
                    app:layout_columnWeight="1" />
                <CheckBox
                    android:id="@+id/newspaperSourceBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/newspaper_source"
                    android:textSize="15sp"
                    app:layout_columnWeight="1" />

            </androidx.gridlayout.widget.GridLayout>


            <LinearLayout
                android:id="@+id/loginlogoutLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/login"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/login_description"
                    android:textColor="@color/login_button_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/logoutBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/logout"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:text="@string/logout_description"
                    android:textColor="@color/logout_button_color"
                    android:textSize="15sp" />
            </LinearLayout>

            <Button
                android:id="@+id/startBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/button_color"
                android:text="@string/start_description"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                app:cornerRadius="10dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:max="100"
                android:progress="0"
                android:progressTint="@color/button_color" />

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="0/0"
                android:textAlignment="center"
                android:textColor="#333333"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

    <WebView
        android:id="@+id/webViewBing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1" />

</LinearLayout>
